Sat Nov  1 14:17:57 1997  Michael L.H. Brouwer  <michael@thi.nl>

	* Makefile.in: Add call to ranlib to build a table of contents for
	the library since some systems seem to require this.

1997-10-28  Jim Kingdon

	* .cvsignore: Add files du jour for Visual C++, vc50.pdb and vc50.idb.

	* system.h: Define HAVE_TIME_H.
	* dir.c [_WIN32]: Define CLOSEDIR_VOID.

1997-10-18  Jim Kingdon

	* build_diff.com: Add diff3.c

Fri Sep 26 14:24:42 1997  Tim Pierce  <twp@twp.tezcat.com>

	* diff.c (diff_run): Save old value of optind before calling
	getopt_long, then restore before returning.  Eventually it would
	be nice if diff_run were fully reentrant.

	New diff3 library for CVS.
	* Makefile.in (SOURCES): Add diff3.c.
	(OBJECTS): Add diff3.o.
	* diff3.c: New file, copied from diffutils-2.7.  See diffutils for
	earlier ChangeLogs.  Undefine initialize_main macro. Remove <signal.h>.
	(diff3_run): Renamed from main().  Add `outfile' argument.  Remove
	SIGCLD handling; we do not fork.  Save optind and reset to 0
	before calling getopt_long; restore after option processing done.
	(read_diff): Use diff_run with a temporary output file,
	instead of forking a diff subprocess and reading from a pipe.
	Change DIFF_PROGRAM to "diff"; this argument is now used only for
	diagnostic reporting.
	(xmalloc, xrealloc): Removed.
	(diff_program): Removed.
	(diff_program_name): Made extern, so it may be used in other
	library calls like `error'.
	(initialize_main): New function.

	Namespace munging.  util.c defines both fatal() and
 	perror_with_exit(), but these cannot be used to abort diff3: both
 	attempt to longjmp() to a buffer set in diff.c, used only by
 	diff_run.  This is an awful solution, but necessary until the code
 	can be cleaned up.  (These functions do not *have* to be renamed,
 	since both are declared static to diff3.c and should not clash
 	with libdiff.a, but it reduces potential confusion.)
	* diff3.c (diff3_fatal): Renamed from fatal.