@@ -1,3 +1,12 @@
+Thu Nov  6 12:42:12 1997  Karl Fogel  <kfogel@floss.red-bean.com>
+	                  and Paul Eggert <eggert@twinsun.com>
+
+	* analyze.c: applied Paul Eggert's patch to fix the diff3 merge
+	bug described in ccvs/doc/DIFFUTILS-2.7-BUG:
+	(shift_boundaries): new var `inhibit_hunk_merge'; use it to
+	control something important that I don't quite understand, but
+	Paul apparently does, so that's okay.
+
 Sat Nov  1 14:17:57 1997  Michael L.H. Brouwer  <michael@thi.nl>
 
 	* Makefile.in: Add call to ranlib to build a table of contents for
